Bug 283420 - "Send by email" tries to start kmail
Summary: "Send by email" tries to start kmail
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Share Like Connect (other bugs)
Version First Reported In: PA 2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: unscheduled
Assignee: Marco Martin
URL:
Keywords:
: 287992 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-05 21:14 UTC by Thomas Pfeiffer
Modified: 2012-08-10 10:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2011-10-05 21:14:23 UTC
Version:           unspecified
OS:                Linux

When tapping "share" on a file and then "send by email", I get the error message "Could not find 'kmail' executable."

Reproducible: Always

Steps to Reproduce:
Select a file resource
Tap "share"
Tap "send by email"

Actual Results:  
Error "Could not find 'kmail' executable."

Expected Results:  
Kontact Touch Mail should by launched

My system is not up to date as I'm currently struggling with some technical problems, so this might already be fixed.
Comment 1 Javier Llorente 2011-10-31 15:00:36 UTC
Confirmed. Issue reproducible on 2011-10-27-21-59-basyskom-plasma-active-testing-meego-usb-live.iso
Comment 2 Javier Llorente 2011-12-01 15:29:01 UTC
*** Bug 287992 has been marked as a duplicate of this bug. ***
Comment 3 Lamarque V. Souza 2011-12-01 16:16:59 UTC
I traced the problem until kdelibs/kdecore/kernel/ktoolinvocation_x11.cpp. KInvocationTool starts kmail by default if there is no mail client configured in ~/.kde/share/config/emaildefaults, which is our case.

I set kmail-mobile as mail client but it does not recognise the parameters KInvocationTool passes to it. I will fix today.
Comment 4 Lamarque V. Souza 2011-12-01 17:13:17 UTC
The fix for this will take more time than I have thought. Kmail-mobile does not support opening the composer from command line, which is how KInvocationTool launches the regular kmail. Kmail-mobile does support opening the composer using dbus, but it does not support passing an file name to be attached.

I will implement attachment parameter support in kmail-mobile's dbus interface, it does not seem too difficult. We will have to drop KInvocationTool in share-like-connect's dataengine and launch kmail-mobile using dbus, which I think is a good thing.

Usually that kind of change should not the commited close to a release. I will create the patch for kdepim and share-like-connect packages and try my best to not to screw up anything :-)
Comment 5 Lamarque V. Souza 2011-12-03 16:19:24 UTC
Patch that fix this problem: https://git.reviewboard.kde.org/r/103316/

We still need to change ~/.kde/share/config/emaildefaults to configure kmail-mobile as the default mail client (kmail is the default). We need to change the line

EmailClient=

to

EmailClient=kmail-mobile -t %t -s %s -c %c -b %b -B %B -A %A
Comment 6 Marco Martin 2011-12-03 16:40:14 UTC
awesome.
i added an emaildefaults in the config folder of plasma-mobile, should be put in the plasma-contour-config package
Comment 7 Javier Llorente 2011-12-07 10:52:43 UTC
Already fixed in 2011-12-06-18-24-basyskom-plasma-active-devel-meego-usb-live.iso
Comment 8 Lamarque V. Souza 2011-12-16 11:58:32 UTC
Git commit 22ed26ff43c16abf6e9baff9eabdae65343dde96 by Lamarque V. Souza.
Committed on 16/12/2011 at 12:57.
Pushed by lvsouza into branch 'master'.

Add command line parameters support to kmail-mobile.

REVIEW: 8985
BUG: 283420

M  +2    -2    mobile/lib/kdeclarativeapplication.cpp
M  +1    -1    mobile/lib/kdeclarativeapplication.h
A  +38   -0    mobile/mail/kmailmobileoptions.h     [License: LGPL (v2.1+)]
M  +31   -2    mobile/mail/main.cpp
M  +107  -0    mobile/mail/mainview.cpp
M  +19   -0    mobile/mail/mainview.h

http://commits.kde.org/kdepim/22ed26ff43c16abf6e9baff9eabdae65343dde96
Comment 9 Thomas Pfeiffer 2012-05-16 19:51:12 UTC
This bug has now reappeared (tested on the current MeeGo devel image)
Comment 10 Lamarque V. Souza 2012-05-25 20:29:05 UTC
Git commit f206fda6bcc9da9806b3701215fe000bd05c8c6f by Lamarque V. Souza.
Committed on 25/05/2012 at 22:27.
Pushed by lvsouza into branch 'Active/2.1'.

Fix kmail-mobile configuration.
(cherry picked from commit e8c270894bd2d15cc7f6afb0e7572410b477b1d5)

M  +3    -0    config/emaildefaults

http://commits.kde.org/plasma-mobile/f206fda6bcc9da9806b3701215fe000bd05c8c6f
Comment 11 Lamarque V. Souza 2012-05-25 20:29:05 UTC
Git commit e8c270894bd2d15cc7f6afb0e7572410b477b1d5 by Lamarque V. Souza.
Committed on 25/05/2012 at 22:27.
Pushed by lvsouza into branch 'master'.

Fix kmail-mobile configuration.

M  +3    -0    config/emaildefaults

http://commits.kde.org/plasma-mobile/e8c270894bd2d15cc7f6afb0e7572410b477b1d5
Comment 12 Sebastian Kügler 2012-05-30 10:36:03 UTC
This commit also needs to go into the plasma-mobile-config repo, no?

(And the duplication should probably be removed.)
Comment 13 Lamarque V. Souza 2012-05-30 11:44:29 UTC
I pushed it plasma-mobile-config repo too, for some reason the git hooks did not added a comment to this bug entry.
Comment 14 Sebastian Kügler 2012-05-30 11:48:53 UTC
OKay, cool. Thanks!
Comment 15 Aaron J. Seigo 2012-05-30 11:49:59 UTC
Git commit 76d6bda20bce82f5ca8127b70eda8d2454b51d9b by Aaron Seigo.
Committed on 30/05/2012 at 13:48.
Pushed by aseigo into branch 'master'.

commit the fix in the correct repository

M  +3    -0    appconfig/emaildefaults

http://commits.kde.org/plasma-mobile-config/76d6bda20bce82f5ca8127b70eda8d2454b51d9b
Comment 16 Lamarque V. Souza 2012-05-30 12:03:27 UTC
(In reply to comment #15)
> Git commit 76d6bda20bce82f5ca8127b70eda8d2454b51d9b by Aaron Seigo.
> Committed on 30/05/2012 at 13:48.
> Pushed by aseigo into branch 'master'.
> 
> commit the fix in the correct repository
> 
> M  +3    -0    appconfig/emaildefaults
> 
> http://commits.kde.org/plasma-mobile-config/
> 76d6bda20bce82f5ca8127b70eda8d2454b51d9b

Ok, that explains why nothing showed up here when I pushed the commit to the scratch repo :)
Comment 17 Thomas Pfeiffer 2012-08-10 10:22:19 UTC
Bug is fixed again.