Add command line parameters support to kmail-mobile.

REVIEW: 8985
BUG: 283420